fixed top spacing

--- a/style.css
+++ b/style.css
@@ -51,9 +51,9 @@ img {
 
 #title {
     position:fixed;
-    left:0px; 
+    left:0px;
+    padding-top: 1%; 
     padding:10px;
-    margin-top:2%;
     margin-bottom:2%;
     width:100%;
     background-color:rgb(29, 154, 163);
